# sevent

./: Cargo.toml  README.org  TODO.org
examples/: echo_client_bench.rs  echo_client_bincode.rs  echo_server.rs  echo_server_broadcast.rs  fake_http_server.rs  kv_client.rs  kv_server.rs  misc_test.rs
src/: chan.rs  circular_buf.rs  connect.rs  connection.rs  errors.rs  ext.rs  handler.rs  iobuf.rs  iobuf_old.rs  lib.rs  listener.rs  tick.rs  timer.rs  utils.rs
src/v2/: connection.rs  listener.rs  mod.rs
