[package]
name = "sevent"
version = "0.1.0"
authors = ["Leandro Pacheco <contact@leandropacheco.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
lazycell = "0.5"
histogram = "0.6"
rand = "0.3"

mio = "0.6"
mio-more = "0.1"
slab = "0.4"

bytes = "0.4"
serde = "1.0"
bincode = "0.9"


[profile.release]
debug = true
