[package]
name = "sevent"
version = "0.1.0"
authors = ["Leandro Pacheco <contact@leandropacheco.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
lazycell = "0.5"
rand = "0.3"

mio = "0.6"
mio-more = "0.1"
slab = "0.4"

serde = "1.0"
serde_derive = "1.0"
bytes = "0.4"
bincode = "0.9"

iovec = "0.1"
libc = "0.2"

[dev-dependencies]
serde_derive = "1.0"
histogram = "0.6"

[profile.release]
debug = true
